jackett/Manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jackett
spec:
  clusterIP: None
  ports:
  - name: ui
    port: 9117
    targetPort: 9117
    protocol: TCP
